@@ -6,6 +6,8 @@
    fake-able and breaks playback to forked-daap (and mopidy?)
 3. Add '.opus' to list of recognised extensions for local files.
 4. Initialise network proxy factory when starting.
+5. If artist, album, and title are empty in replaygain dialog, then show
+   filename in title column.
 
 2.3.2
 -----
